<resources>
    <string name="app_name">Dicoding Event App</string>
    <string name="title_home">Home</string>
    <string name="description">Description</string>
    <string name="up_coming">Up Coming Event</string>
    <string name="finished">Finished Event</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrasi">Registrasi</string>
    <string name="past_event">Past Event</string>
    <string name="up_coming_event">Up Coming Event</string>
    <string name="dicoding_event">Dicoding Event</string>
</resources>