<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dicodingeventapp.ui.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_upcomingevent"
        android:name="com.example.dicodingeventapp.ui.UpComingEventFragment"
        android:label="@string/up_coming"
        tools:layout="@layout/fragment_up_coming_event" />

    <fragment
        android:id="@+id/navigation_finished_event"
        android:name="com.example.dicodingeventapp.ui.FinishedEventFragment"
        android:label="@string/finished"
        tools:layout="@layout/fragment_finished_event"
        />
</navigation>